fix(page): remove unnecessary z-index from page border (#1513)

--- a/packages/extensions/src/page/style.css
+++ b/packages/extensions/src/page/style.css
@@ -22,7 +22,6 @@
 
 .ProseMirror pm-page-chunk[data-page-head]::before {
   box-sizing: border-box;
-  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
